# ddv

./: .gitignore  AGENT_SEARCH_FLOW.md  GEMINI_SETUP.md  MEILISEARCH_MIGRATION.md  Makefile  README.md  README_SIMPLE.md  SEARCH_FLOW_DIAGRAM.txt  ddv.sqlite3  env.example  index_products.py  manage_meilisearch.py  meili.out  meilisearch.md  prd.md  pyproject.toml  render.yaml  requirements.txt  run_adk_web.py  run_uvicorn.py  setup_meilisearch.py  simple_export.py  simple_meilisearch_server.py  simple_web_server.py  start_meilisearch.py  tasklog.md  tasklog_product_agent_simplification.md  test_refactored_agents.py  test_search.py
app/: __init__.py  agent.py  agent_simple.py  config.py  config_simple.py  ddv.sqlite3  prompt.py  prompt_simple.py
app/shared_libraries/: __init__.py  constants.py  types.py  utils.py
app/sub_agents/: __init__.py
app/sub_agents/product/: __init__.py  agent.py  product_tools.py  prompt.py  simplified_agent.py  simplified_prompt.py  simplified_tools.py  tools.py
app/tools/: __init__.py  compare.py  enhanced_product_store.py  explore.py  gemini_search_engine.py  gemini_utils_tool.py  health_check.py  meilisearch_engine.py  meilisearch_simple.py  product_store.py  search.py  tools_manager.py
crawl_tools/: accurate_price_crawl.py  clean_prices.py  complete_offer_update.py  crawl_ddv.py  crawl_prices.py  debug_page.py  enrich_from_internal.py  final_price_cleanup.py  simple_crawl.py  sync_offers.py  sync_reviews.py  test_crawl.py  test_specs.py
data.ms/: instance-uid
data.ms.v1_20/auth/: data.mdb  lock.mdb
data.ms.v1_20/indexes/f9d00a93-f6fa-4a7d-a8e9-29f9e430087f/: data.mdb  lock.mdb
data.ms.v1_20/tasks/: data.mdb  lock.mdb
data.ms/auth/: data.mdb  lock.mdb
data.ms/indexes/2a55548d-c7d8-4cac-bdde-0f5bef696554/: data.mdb  lock.mdb
data.ms/indexes/2b9a0ee9-1337-452c-8801-7327249f2c5e/: data.mdb  lock.mdb
data.ms/indexes/c1d24a2a-5281-43b5-8964-f3318c91ef9b/: data.mdb  lock.mdb
data.ms/tasks/: data.mdb  lock.mdb
frontend/: ddv.sqlite3  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatHistorySidebar.tsx  ChatMessagesView.tsx  LoginPanel.tsx  ProductCard.tsx  ProductDetailModal.tsx  ProductGrid.tsx  SessionSummary.tsx  WelcomeScreen.tsx
frontend/src/types/: chat.ts
frontend/src/utils/: messageParser.ts  sessionUtils.ts
profiles/: merged_products.json  offers.json  products.json  products.json.bak2  reviews.json  stores.json
search_index/: MAIN_c5vltk6ntaxx99bo.seg  MAIN_io403e7ooqsiass9.seg  MAIN_oqnx396f91ppkyhz.seg  MAIN_ow8wxzl5yb933stp.seg  MAIN_pm8xz5hsi4c1m2gh.seg  MAIN_v0e9xoasa2u1h3r8.seg  MAIN_zfcnqdm68cchy226.seg  _MAIN_23.toc
